# coursework_7

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
